@@ -21,6 +21,7 @@ github_user   = Perl5-Alien
 remove = strict
 remove = warnings
 remove = base
+remove = if
 remove = Env
 remove = Carp
 remove = File::Spec
